Refactored for an unused import and switched in a getFirst()